final/styles/index-small.css
:root {
    --chess-black: #000000;

    --chess-white-trans: #ffffff83;

    --chess-black-trans: #00000084;

    --chess-light-green: rgb(1, 255, 1);

    --chess-dark-gray: #2c2c2c;
    --chess-dark-gray-trans: #2c2c2cbe;
    /* Modal: background color */

    --chess-white: #ffffff;
    /*Links : default, text-col: P, and h1,h2,h3...*/

    --chess-gold: #d4af37;
    /* background-color: default, hover effects: button, nav*/


    --chess-green: #228B22;
    /*heading */

    --chess-light-gray: #f5f5f5;
    /*bg-color: sections, secondary text */

    --heading-font: 'Merriweather', serif;
    --body-font: 'Roboto', sans-serif;
}

@media screen and (max-width: 1000px) {

    *,
    *::before,
    *::after {
        box-sizing: border-box;
    }

    html {
        margin: 0;
        padding: 0;
    }

    h1,
    h2,
    h3 {
        font-family: var(--heading-font);
    }

    p,
    span,
    a {
        font-family: var(--body-font);
    }


    body {
        margin: 0;
        padding: 0;
        width: 100%;
    }

    .bg-image {
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        object-fit: cover;
        object-position: center center;
        z-index: -1;
        pointer-events: none;
        user-select: none;
    }

    header {
        display: grid;
        grid-template-columns: 50px auto 50px;
        background: linear-gradient(to right, var(--chess-black-trans), var(--chess-dark-gray-trans));
        align-items: center;
        padding: 1rem;
        background-size: cover;
        width: 100%;
        position: relative;
        backdrop-filter: blur(8px);
    }

    .persistent-nav {
        top: 0;
        position: fixed;
        z-index: 2;
        width: 100%;
    }

    header img {
        width: 100%;
        object-fit: cover;
        overflow: hidden;
    }

    header h1 {
        display: inline;
        margin: 0;
        text-align: center;
        color: var(--chess-white);
    }

    #nav-toggle {
        position: absolute;
        top: 80px;
        left: 0;
        right: 0;
        background: linear-gradient(to right, var(--chess-black-trans), var(--chess-dark-gray-trans));
        padding: 1rem;
        border-radius: 5px;
        display: none;
        z-index: 1;
        backdrop-filter: blur(8px);
        isolation: isolate;
    }

    #nav-toggle.show {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        gap: 1rem;
        background: linear-gradient(to right, var(--chess-black-trans), var(--chess-dark-gray-trans));
        backdrop-filter: blur(12px);
        will-change: backdrop-filter;
        isolation: isolate;
        transform: translateZ(0);
    }

    #nav-toggle .current {
        border-bottom: none;
        background: var(--chess-light-green);
        padding: 1rem 0 1rem;
        color: var(--chess-black);
        text-decoration: none;
    }

    #nav-toggle.show a:not(:nth-of-type(1)) {
        color: var(--chess-white);
        text-decoration: none;
        border-bottom: solid 1px var(--chess-white);
        padding: 1rem 0 1rem;
        animation: slideDown 0.4s forwards;
        opacity: 0;
        transform: translateY(-10px);
    }

    #nav-toggle.show a:nth-child(1) {
        animation-delay: 0.1s;
    }

    #nav-toggle.show a:nth-child(2) {
        animation-delay: 0.2s;
    }

    #nav-toggle.show a:nth-child(3) {
        animation-delay: 0.3s;
    }

    @keyframes slideDown {
        to {
            opacity: 1;
            transform: translateY(0);
        }
    }


    #nav-toggle.hide a {
        animation: slideUp 0.4s ease forwards;
    }

    #nav-toggle.hide a:nth-child(3) {
        animation-delay: 0.1s;
    }

    #nav-toggle.hide a:nth-child(2) {
        animation-delay: 0.2s;
    }

    #nav-toggle.hide a:nth-child(1) {
        animation-delay: 0.3s;
    }

    @keyframes slideUp {
        from {
            opacity: 1;
            transform: translateY(0);
        }

        to {
            opacity: 0;
            transform: translateY(-10px);
        }
    }

    #toggle-button {
        display: block;
        font-family: Verdana, Geneva, Tahoma, sans-serif;
        border: none;
        font-size: 1.3rem;
        width: 50px;
        height: auto;
        margin-right: 1rem;
        padding: .5rem;
        border-radius: 8px;
        background-color: transparent;
        color: var(--chess-white);
        cursor: pointer;
    }

    .hero {
        display: block;
        width: 100%;
        position: relative;
        margin: 80px auto;
        padding: 0;
    }

    .hero img {
        display: block;
        width: 100%;
        height: auto;
        overflow: hidden;
        margin: 0 auto;
        object-fit: contain;
    }

    .insert-into-hero {
        position: absolute;
        background-color: var(--chess-dark-gray-trans);
        bottom: 22%;
        left: 50%;
        transform: translate(-50%, 50%);
        padding: 1rem;
        width: 100%;
        text-align: center;
        backdrop-filter: blur(2px);
        color: var(--chess-white);
    }

    .insert-into-hero h1 {
        color: var(--chess-light-green);
        font-size: 2.4rem;
        margin: 0;
        padding: 1rem;
        font-weight: 800;
    }



    .insert-into-hero p,
    .insert-into-hero a {
        color: var(--chess-white);
        font-size: 1.2rem;
        margin: 0;
        padding: 1rem 1rem 2.5rem;
    }

    .insert-into-hero a {
        background-color: var(--chess-green);
        padding: 1rem;
        text-decoration: none;
        border: solid 1px var(--chess-white);
        font-size: 1.2rem;
        font-weight: 700;
        border-radius: 6px;
        color: var(--chess-white);
    }

    main>h1 {
        color: var(--chess-green);
        padding-left: 1rem;
        font-size: 2.5rem;
        text-shadow: 2px 2px 4px var(--chess-black);
    }

    article {
        color: var(--chess-white);
    }

    .cards {
        padding: 1rem;
    }

    .cards article h2 {
        color: var(--chess-light-green);
        font-size: 2rem;
    }

    .cards article p {
        color: var(--chess-white);
        font-size: 1.3rem;
    }

    .socials {
        display: flex;
        flex-direction: row;
        justify-content: center;
    }


    footer {
        background: linear-gradient(to right, var(--chess-black-trans), var(--chess-dark-gray-trans));
        padding: 1rem;
    }

    footer h3 {
        text-align: center;
        color: var(--chess-light-green);
    }


    footer p,
    footer span {
        color: var(--chess-white);
    }


}

